--- a/config.yml
+++ b/config.yml
@@ -328,11 +328,11 @@ params:
   # Uncomment to enable.
   #
   # Format:
-  customTabs:
-    - name: Homepage
-      link: https://www.dampsoft.de/
-    - name: Impressum
-      link: https://www.dampsoft.de/impressum/
+  #customTabs:
+  #  - name: Homepage
+  #    link: https://www.dampsoft.de/
+  #  - name: Impressum
+  #    link: https://www.dampsoft.de/impressum/
 
   # Disable complex server-side
   # calculations that may impact
